# your_wallet

./: .gitignore  CLAUDE.md  README.md  start-dev.sh
.dart_tool/: package_config.json  package_graph.json
backend/: Cargo.toml
backend/src/: api.rs  main.rs  models.rs  services.rs
backend/src/api/: mod.rs
backend/src/db/: mod.rs
backend/src/models/: mod.rs
backend/src/services/: mod.rs
backend/src/utils/: mod.rs
docs/: 前端开发状态.md  后端开发状态.md  开发流程文档.md
frontend/: pubspec.yaml
frontend/lib/: main.dart
frontend/lib/models/: account.dart  account.g.dart  api_response.dart  api_response.g.dart  category.dart  category.g.dart  models.dart  transaction.dart  transaction.g.dart  user.dart  user.g.dart
frontend/lib/providers/: account_provider.dart  app_provider.dart  providers.dart  transaction_provider.dart
frontend/lib/screens/: add_transaction_screen.dart  api_test_screen.dart  transaction_list_screen.dart
frontend/lib/services/: account_service.dart  api_client.dart  local_storage_service.dart  services.dart  statistics_service.dart  transaction_service.dart  user_service.dart
frontend/test/: widget_test.dart
